--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +37,7 @@
 </head>
 
 <body>
-	<div class="top-header">
+	<nav class="top-header">
 		<h1 class="name">Nina Carducci</h1>
 		<div class="nav" id="nav">
 			<ul>
@@ -51,8 +50,8 @@
 							alt="Logo instagram"></a></li>
 			</ul>
 		</div>
-	</div>
-	<div id="header">
+	</nav>
+	<header id="header">
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -62,7 +61,7 @@
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
 					aria-label="Slide 3"></button>
 			</div>
-			<!-- <div class="carousel-inner">
+			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img srcset="./assets/images/slider/ryoji.webp 1918w,
 							./assets/images/slider/ryoji.webp 1500w, 
@@ -70,7 +69,8 @@
 						class="d-block w-100 h-auto" width="1918" height="888" alt="ryoji" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img srcset="./assets/images/slider/nicholas.webp 1918w ,
+					<img srcset="
+					        ./assets/images/slider/nicholas.webp 1918w ,
 							./assets/images/slider/nicholas.webp 1500w,
 							./assets/images/slider/nicholas.webp 758w" sizes="100vw" " src=" ./assets/images/slider/nicholas.webp"
 						class="d-block w-100 h-auto" width="1918" height="888" alt="nicholas" loading="lazy">
@@ -80,176 +80,168 @@
 								./assets/images/slider/edward.webp 1500w, 
 								./assets/images/slider/edward.webp 758w" sizes="100vw" src="./assets/images/slider/edward.webp"
 						class="d-block w-100 h-auto" width="1918" height="888" alt="edward" loading="lazy">
-				</div> -->
-				<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img loading="lazy" src="./assets/images/slider/ryoji.webp" class="d-block w-100 h-auto" width="1919px" height="888px" alt="Photo ryoji-iwata" >
 				</div>
-				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images/slider/nicholas.webp" class="d-block w-100 h-auto" width="1919px" height="888px" alt="Photo nicholas-green" >
-				</div>
-				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images/slider/edward.webp" class="d-block w-100 h-auto" width="1919px" height="888px" alt="Photo edward-cisneros" >
-				</div>    </div>
-				
-
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
 			</div>
+
+
+
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-		<div id="about">
-			<div class="picture left">
-				<img src="./assets/images/nina.webp" width="378" height="360" alt="Photo nina">
-			</div>
-			<div id="about-me">
-				<h2 class="about-me__title">A propos de moi</h2>
-				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
-					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-					immortels, voilà ce qui me fait vibrer.</p>
-				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
-					le
-					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
-					yeux,
-					ou le partager au plus grand nombre.
-					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
-					approche, ma
-					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
-					la
-					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-			</div>
+	</header>
+	<section id="about">
+		<div class="picture left">
+			<img src="./assets/images/nina.webp" width="378" height="360" alt="Photo nina">
 		</div>
-		<div id="gallery">
-			<h3 class="title">Portfolio</h3>
-			<div class="container py-3">
-				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron.webp" alt="aaron-paul" />
-
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" />
-
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" />
-
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah.webp" alt="hannah-busing" />
-
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade.webp" alt="ade-tunji" />
-
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob.webp" alt="jakob-owens" />
-
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino.webp" alt="nicholas-green" />
-
-					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin.webp" alt="austin-neill" />
-
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" />
-				</div>
-			</div>
-			<div class="quote">
-				<figure>
-					<blockquote>
-						<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
-							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
-							vérité.
-						</p>
-					</blockquote>
-					<figcaption class="quote__author">- Richard Avedon</figcaption>
-				</figure>
-			</div>
+		<div id="about-me">
+			<h2 class="about-me__title">A propos de moi</h2>
+			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+				immortels, voilà ce qui me fait vibrer.</p>
+			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
+				le
+				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+				yeux,
+				ou le partager au plus grand nombre.
+				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
+				approche, ma
+				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
+				la
+				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 		</div>
+	</section>
+	<section id="gallery">
+		<h3 class="title">Portfolio</h3>
+		<div class="container py-3">
+			<div class="gallery" style="display: none">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron.webp"
+					alt="aaron-paul" loading="lazy" />
 
-		<div id="services">
-			<h4 class="title">Mes services</h4>
-			<div class="container">
-				<div class="service">
-					<div class="service__description">
-						<h5>Shooting photo</h5>
-						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
-							en
-							Île-de-France pour réaliser vos photos</p>
-					</div>
-					<div class="service__price">
-						<h5>350€/demi journée</h5>
-						<span>Matériel, déplacement inclus</span>
-					</div>
+				<img data-gallery-tag="Entreprises" class="gallery-item"
+					src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" loading="lazy" />
 
-				</div>
-				<div class="service">
-					<div class="service__description">
-						<h5>Retouches</h5>
-						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
-							optimal pour vos publications</p>
-					</div>
-					<div class="service__price">
-						<h6>50€/photo</h6>
-						<span>2 AR par photo</span>
-					</div>
-				</div>
-				<div class="service">
-					<div class="service__description">
-						<h5>Album photos</h5>
-						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
-							un
-							album photo personnalisé</p>
-					</div>
-					<div class="service__price">
-						<h5>400€ album A4</h5>
-						<span>30 pages recto/verso</span>
-					</div>
-				</div>
+				<img data-gallery-tag="Entreprises" class="gallery-item"
+					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" loading="lazy" />
+
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah.webp"
+					alt="hannah-busing" loading="lazy" />
+
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade.webp"
+					alt="ade-tunji" loading="lazy" />
+
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob.webp"
+					alt="jakob-owens" loading="lazy" />
+
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino.webp"
+					alt="nicholas-green" loading="lazy" />
+
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin.webp"
+					alt="austin-neill" loading="lazy" />
+
+				<img data-gallery-tag="Entreprises" class="gallery-item"
+					src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" loading="lazy" />
 			</div>
 		</div>
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
+					<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
+						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+						vérité.
+					</p>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
-		<div id="contact">
-			<div class="container">
-				<div class="form-container">
-					<h6>Une question ? Une demande de devis ?</h6>
-					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-					<form action="" method="post">
-						<label for="nom">Nom</label>
-						<input type="text" name="nom" id="nom" placeholder="Nom">
-						<label for="email">Email</label>
-						<input type="email" name="email" id="email" placeholder="Email">
-						<label for="txt">Message</label>
-						<textarea cols="30" rows="10" id="txt"></textarea>
-						<input type="submit" value="Envoyer" />
-					</form>
+	</section>
+
+	<section id="services">
+		<h4 class="title">Mes services</h4>
+		<div class="container">
+			<div class="service">
+				<div class="service__description">
+					<h5>Shooting photo</h5>
+					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+						en
+						Île-de-France pour réaliser vos photos</p>
 				</div>
-				<div class="picture right">
-					<img src="./assets/images/camera-.webp" width="370" height="370" alt="Image nina">
+				<div class="service__price">
+					<h5>350€/demi journée</h5>
+					<span>Matériel, déplacement inclus</span>
+				</div>
+
+			</div>
+			<div class="service">
+				<div class="service__description">
+					<h5>Retouches</h5>
+					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
+						optimal pour vos publications</p>
+				</div>
+				<div class="service__price">
+					<h6>50€/photo</h6>
+					<span>2 AR par photo</span>
+				</div>
+			</div>
+			<div class="service">
+				<div class="service__description">
+					<h5>Album photos</h5>
+					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
+						un
+						album photo personnalisé</p>
+				</div>
+				<div class="service__price">
+					<h5>400€ album A4</h5>
+					<span>30 pages recto/verso</span>
 				</div>
 			</div>
 		</div>
+	</section>
+	<div class="quote">
+		<figure>
+			<blockquote>
+				<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+					traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
+			</blockquote>
+			<figcaption class="quote__author">- Richard Avedon</figcaption>
+		</figure>
+	</div>
+	<section id="contact">
+		<div class="container">
+			<div class="form-container">
+				<h6>Une question ? Une demande de devis ?</h6>
+				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+				<form action="" method="post">
+					<label for="nom">Nom</label>
+					<input type="text" name="nom" id="nom" placeholder="Nom">
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email" placeholder="Email">
+					<label for="txt">Message</label>
+					<textarea cols="30" rows="10" id="txt"></textarea>
+					<input type="submit" value="Envoyer" />
+				</form>
+			</div>
+			<div class="picture right">
+				<img src="./assets/images/camera-.webp" width="370" height="370" alt="Image nina">
+			</div>
+		</div>
+	</section>
 
-		</footer>
-		<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-		<script src="./assets/maugallery.js"></script>
-		<script src="./assets/scripts.js"></script>
-		<script type="application/ld+json">
+	<script async src="./assets/maugallery.js"></script>
+	<script async src="./assets/scripts.js"></script>
+	<script async src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script async src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
 		  "@type": "LocalBusiness",
@@ -270,11 +262,9 @@
 			"http://www.facebook.com/ninacarducci",
 			"http://www.twitter.com/ninacarducci"
 		  ],
-		  "description": "Des photos de qualites ? t'es au bon endroit, ninacarducci vous facilite la vie avec tous qui est retouche et Shooting"
+		  "description": "Des photos de qualitees ? t'es au bon endroit, ninacarducci vous facilite la vie avec tous qui est retouche et Shooting"
 		}
     </script>
-
-
 </body>
 
 </html>
