--- a/index.html
+++ b/index.html
@@ -63,28 +63,36 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img srcset="./assets/images/slider/ryoji.webp 1918w,
-							./assets/images/slider/ryoji.webp 1500w, 
-							./assets/images/slider/ryoji.webp 758w" sizes="100vw" src="./assets/images/slider/ryoji.webp"
-						class="d-block w-100 h-auto" width="1918" height="888" alt="ryoji" loading="lazy">
+					<img srcset="
+					        ./assets/images/slider/ryoji.webp 1918w,
+							./assets/images/slider/ryoji.webp 1434w, 
+							./assets/images/slider/ryoji.webp 758w" 
+							sizes="100vw" 
+							src="./assets/images/slider/ryoji.webp"
+						  class="d-block w-100 h-auto" 
+						  width="1918" height="888" alt="ryoji" loading="lazy">
 				</div>
 				<div class="carousel-item">
 					<img srcset="
 					        ./assets/images/slider/nicholas.webp 1918w ,
-							./assets/images/slider/nicholas.webp 1500w,
-							./assets/images/slider/nicholas.webp 758w" sizes="100vw" " src=" ./assets/images/slider/nicholas.webp"
-						class="d-block w-100 h-auto" width="1918" height="888" alt="nicholas" loading="lazy">
+							./assets/images/slider/nicholas.webp 1434w,
+							./assets/images/slider/nicholas.webp 758w" 
+						sizes="100vw" 
+						src=" ./assets/images/slider/nicholas.webp"
+						class="d-block w-100 h-auto" 
+						width="1918" height="888" alt="nicholas" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img srcset="./assets/images/slider/edward.webp 1918w,
-								./assets/images/slider/edward.webp 1500w, 
-								./assets/images/slider/edward.webp 758w" sizes="100vw" src="./assets/images/slider/edward.webp"
-						class="d-block w-100 h-auto" width="1918" height="888" alt="edward" loading="lazy">
+					<img srcset="
+					       ./assets/images/slider/edward.webp 1918w,
+				           ./assets/images/slider/edward.webp 1434w, 
+					       ./assets/images/slider/edward.webp 758w" 
+								sizes="100vw"
+				         src="./assets/images/slider/edward.webp"
+						 class="d-block w-100 h-auto" 
+						 width="1918" height="888" alt="edward" loading="lazy">
 				</div>
 			</div>
-
-
-
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -122,32 +130,32 @@
 		<h3 class="title">Portfolio</h3>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron.webp"
-					alt="aaron-paul" loading="lazy" />
+				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy" src="./assets/images/gallery/concerts/aaron.webp"
+					alt="aaron-paul"  />
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" loading="lazy" />
+				loading="lazy"	src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" />
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" loading="lazy" />
+				loading="lazy"	src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman"  />
 
 				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah.webp"
-					alt="hannah-busing" loading="lazy" />
+					alt="hannah-busing"  />
 
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade.webp"
-					alt="ade-tunji" loading="lazy" />
+				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy" src="./assets/images/gallery/portraits/ade.webp"
+					alt="ade-tunji"  />
 
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob.webp"
-					alt="jakob-owens" loading="lazy" />
+				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy" src="./assets/images/gallery/mariage/jakob.webp"
+					alt="jakob-owens"  />
 
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino.webp"
-					alt="nicholas-green" loading="lazy" />
+				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy" src="./assets/images/gallery/portraits/nino.webp"
+					alt="nicholas-green" />
 
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin.webp"
-					alt="austin-neill" loading="lazy" />
+				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy" src="./assets/images/gallery/concerts/austin.webp"
+					alt="austin-neill" />
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" loading="lazy" />
+				loading="lazy"	src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos"  />
 			</div>
 		</div>
 		<div class="quote">
